implement compiler plugin